[gd_scene load_steps=7 format=3 uid="uid://ccrkr1loubx6f"]

[ext_resource type="Script" uid="uid://k8mpu6iya2ny" path="res://test_erin/scripts/pose_meter.gd" id="1_xx3qn"]

[sub_resource type="Gradient" id="Gradient_j2v3o"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.85098, 0.466667, 0.490196, 0.431373)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_eh1ep"]
gradient = SubResource("Gradient_j2v3o")

[sub_resource type="Gradient" id="Gradient_aq88g"]
offsets = PackedFloat32Array(0, 0.640845)
colors = PackedColorArray(0.6437, 0.402269, 0.490357, 1, 0.303114, 0.605526, 0.887477, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_v0l34"]
gradient = SubResource("Gradient_aq88g")

[sub_resource type="PrismMesh" id="PrismMesh_xx3qn"]

[node name="PoseMeter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -29.0
offset_right = 8.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xx3qn")

[node name="PoseMeterr" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.324
anchor_top = 0.4
anchor_right = 0.655
anchor_bottom = 0.5
offset_left = -0.0799866
offset_top = 0.199982
offset_right = -0.410095
offset_bottom = -0.634003
value = 100.0
nine_patch_stretch = true
texture_over = SubResource("GradientTexture1D_eh1ep")
texture_progress = SubResource("GradientTexture1D_v0l34")
tint_progress = Color(1, 0.631373, 1, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.449
anchor_top = 0.573
anchor_right = 0.5
anchor_bottom = 0.655
offset_left = -0.330017
offset_top = -2.78601
offset_right = 0.530029
offset_bottom = 0.261963
action_mode = 0
text = "stop"

[node name="triMov" type="MeshInstance2D" parent="."]
position = Vector2(571, 158)
scale = Vector2(241.75, 142.375)
mesh = SubResource("PrismMesh_xx3qn")

[connection signal="value_changed" from="PoseMeterr" to="." method="_on_pose_meterr_value_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
